Fri May 13 08:34:00 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/rdoc.rb:  Output summary after documentation report.
	* lib/rdoc/stats/normal.rb:  Don't output information for users when
	  we're not on a TTY

Fri May 13 07:49:02 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/fileutils.rb:  Hide internal methods from RDoc.  Patch by Darragh
	  Curran.  [Ruby 1.9 - Bug #4684]

Fri May 13 07:36:23 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/httpservlet/erbhandler.rb:  Add documentation.

Fri May 13 07:04:33 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/mathn.rb:  Fix indentation.  Patch by Jason Dew.
          [Ruby 1.9 - Feature #4682]

Fri May 13 06:50:43 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/mathn.rb:  Add documentation.  Patch by Jason Dew.  [Ruby 1.9 -
	  Feature #4667]

Fri May 13 05:44:19 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/logger.rb (class Logger):  Document Logger#datetime_format.
	  Patch by Sergio Gil Pérez de la Manga.  [Ruby 1.9 - Bug #4678]

Fri May 13 05:39:11 2011  Eric Hodel <drbrain@segment7.net>

	* re.c (Init_Regexp): Document option constants.  Patch by Vincent
	  Batts.  [Ruby 1.9 - Bug #4677]
	* lib/uri/common.rb (module URI):  Documentation for URI.  Patch by
	  Vincent Batts.  [Ruby 1.9- Bug #4677]
	* lib/uri/ftp.rb (module URI):  ditto
	* lib/uri/generic.rb (module URI):  ditto
	* lib/uri/http.rb (module URI):  ditto
	* lib/uri/https.rb (module URI):  ditto
	* lib/uri/ldap.rb (module URI):  ditto
	* lib/uri/ldaps.rb (module URI):  ditto
	* lib/uri/mailto.rb (module URI):  ditto
	* process.c (Init_process):  Document Process constants.  Patch by
	  Vincent Batts.  [Ruby 1.9- Bug #4677]

Fri May 13 05:16:38 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rss/atom.rb (module RSS):  Document URIs.  Patch by Mark Turner.
	  [Ruby 1.9 - #4671]
	* lib/rss/rss.rb (module RSS):  Document exception classes.  Patch by
	  Mark Turner.  [Ruby 1.9 - #4671]
